--- a/notebooks/matrix.QC.Rmd
+++ b/notebooks/matrix.QC.Rmd
@@ -29,8 +29,8 @@ Set up file locations + load dependenies
 library(here)
 here::i_am('notebooks/matrix.QC.Rmd')
 BASE_DIR <- here()
-source(file.path(BASE_DIR, 'scripts/locations.R'))
-source(file.path(SCRIPT_DIR, 'constants.R'))
+source(file.path(BASE_DIR, 'scripts', 'locations.R'))
+source(file.path(BASE_DIR, 'scripts', 'constants.R'))
 source(file.path(SCRIPT_DIR, 'utils.data.R'))
 source(file.path(SCRIPT_DIR, 'utils.plot.R'))
 source(file.path(SCRIPT_DIR, 'utils.qc.R'))
