--- a/notebooks/loops.Rmd
+++ b/notebooks/loops.Rmd
@@ -26,19 +26,20 @@ knitr::opts_chunk$set(
 Set up file locations + load dependences
 ```{r dependencies}
 library(here)
-here::i_am('notebooks/loops.Rmd')
-BASE_DIR <- here()
-source(file.path(BASE_DIR, 'scripts/locations.R'))
-source(file.path(BASE_DIR, 'scripts/constants.R'))
-source(file.path(SCRIPT_DIR, 'utils.data.R'))
-source(file.path(SCRIPT_DIR, 'utils.plot.R'))
-source(file.path(SCRIPT_DIR, 'loops/utils.loops.R'))
-library(tidyverse)
-library(magrittr)
 # library(ggplot2)
 # library(ggh4x)
 # library(GGally)
 # library(ComplexUpset)
+here::i_am('notebooks/loops.Rmd')
+BASE_DIR <- here()
+source(file.path(BASE_DIR, 'scripts/locations.R'))
+source(file.path(SCRIPT_DIR, 'utils.data.R'))
+source(file.path(BASE_DIR, 'scripts/constants.R'))
+source(file.path(SCRIPT_DIR, 'utils.plot.R'))
+source(file.path(SCRIPT_DIR, 'utils.annotations.R'))
+source(file.path(SCRIPT_DIR, 'loops/utils.loops.R'))
+library(tidyverse)
+library(magrittr)
 ```
 
 # Load Loop Annotations
